@@ -1,0 +1,275 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "74\u6b72K-pop\u50b3\u5947\u4eba\u7269Cho Yong-pil\u518d\u5ea6\u51fa\u64ca\uff01\u7b2c20\u5f35\u5c08\u8f2f\u300a20\u300b\u6b63\u5f0f\u767c\u884c", "description": "74\u6b72K-pop\u50b3\u5947\u4eba\u7269Cho Yong-pil\u518d\u5ea6\u51fa\u64ca\uff01\u7b2c20\u5f35\u5c08\u8f2f\u300a20\u300b\u6b63\u5f0f\u767c\u884c", "url": "https://www.famechos.me/news/74\u6b72K-pop\u50b3\u5947\u4eba\u7269Cho Yong-pil\u518d\u5ea6\u51fa\u64ca\uff01\u7b2c20\u5f35\u5c08\u8f2f\u300a20\u300b\u6b63\u5f0f\u767c\u884c.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T20:04:14.089206+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行.html"/>
+<meta name="description" content="74歲K-pop傳奇人物Cho Yong-pil再度出擊！睽違多年的第20張專輯《20》正式發行，音樂界再度躍動！">
+<meta name="keywords" content="Cho Yong-pil, K-pop, 20, 第20張專輯, 傳奇人物, 韓國流行音樂">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行.html" />
+        <meta property="og:title" content="74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行" />
+        <meta property="og:description" content="74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行" />
+        <meta property="twitter:description" content="74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>韓國音樂傳奇人物 Cho Yong-pil 證明年齡不是音樂生涯的障礙。74 歲的他在週二發行了他的第 20 張完整專輯 "20"，這是他 11 年來的第一張錄音室專輯。</p>
+<p>Cho Yong-pil 在首爾舉行的新聞發布會上表示，「在 70 歲以上發行新歌曲是一個挑戰，但我真的很努力。」雖然他建議 "20" 可能是他的最後一張專輯，但他補充說：「如果有好的歌曲，我會再次發行新音樂。」</p>
+<p>Cho Yong-pil 承認，在擁擠的新聞發布會上他感到有點尷尬，但他更喜歡在演唱會上表演，這使他感到高興。他在後台等待時感到緊張，但只要他一出來，所有的緊張就會消失。</p>
+<p>在 "20" 中，Cho Yong-pil 探索了各種音樂流派，包括搖滾、電子和抒情歌曲。該專輯包含七首曲目，包括主打單曲 "沒關係"，以及另外兩首新歌曲 "Timing" 和 "Why"。這三首歌曲都是由外國作曲家創作的。</p>
+<p>剩下的四首曲目——"Moment"、"Like Serengeti"、"Feeling of You" 和 "La"——之前已經在 2022 年和 2023 年作為單曲發行。</p>
+<p>該專輯的發行最初定於去年，但被延遲了約一年。Cho Yong-pil 解釋說，他一直在表演演唱會，但製作專輯不是一件容易的事情。它必須令他滿意。</p>
+<p>"沒關係" 是一首激勵人心的歌曲，適合所有在現代生活中面臨挑戰的人。它具有吉他驅動的聲音和 Cho Yong-pil 的清新嗓音。</p>
+<p>該歌曲的音樂視頻也與專輯的數位版本同時發行，展示了韓國演員 Park Geun-hyeong、Jeon Mi-do、Lee Som 和 Byun Yo-han 的令人印象深刻的陣容。</p><h2>Cho Yong-pil 的音樂生涯</h2>
+<p> Cho Yong-pil 是韓國音樂界的傳奇人物，他的音樂生涯橫跨數十年。最近，他分享了他創作歌曲的故事，談到他如何從體育比賽中得到靈感，寫下了主打曲目。</p>
+<p> Cho Yong-pil 於 1968 年作為搖滾樂隊 Atkins 的成員首次亮相。之後，他與各個樂隊合作，包括 Kim Trio，度過了十年。1976 年，他以熱門單曲 "Come Back to Busan Port" 啟動了他的個人事業。</p>
+<h3>音樂成就</h3>
+<p> Cho Yong-pil 的第一張完整專輯是一個巨大的成功，包括熱門曲目，如 "A Girl Outside the Window" 和 "Short Hair Girl"。該專輯是 K-pop 歷史上第一張銷量達到一百萬張的專輯。</p>
+<p> 在他數十年的職業生涯中，Cho Yong-pil 一直保持著他的聲望，發行了 19 張錄音室專輯，其中包括標誌性的曲目，如 "Candle Light"、"Dream" 和 "Leopard of Kilimanjaro"。他贏得了無數獎項，並在音樂行業創下了記錄。</p>
+<h3>最近的作品</h3>
+<p> Cho Yong-pil 的上一張完整專輯是 "Hello"，他的第 19 張專輯，於 2013 年發行。該專輯中的曲目，包括 "Bounce" 和 "Hello"，對音樂榜單產生了重大影響，甚至超越了年輕的 K-pop 明星，如 Psy 的 "Gangnam Style"。</p>
+<p> Cho Yong-pil謙虛地談到專輯 "Hello" 的成功，說道："我很幸運。"</p>
+<p>數十名粉絲聚集在新聞發布會場外，舉起橫幅為即將發行第20張錄音室專輯的藝人加油。該專輯的實體版本預計於11月1日發行。</p>
+<p>韓國政府表示將對北韓和俄羅斯軍事合作採取「分階段措施」。韓國政府還正在考慮派遣人員前往烏克蘭，以監察北韓軍隊在當地的活動。</p>
+<p>俄羅斯和北韓的旗幟在烏克蘭戰場上共同展示，引起了外界的關注。韓國政府對此事表示關注，並表示將採取必要措施。</p>
+據悉，Cho（曺）將於11月23日至24日和11月30日至12月1日在首爾舉行演唱會。<h2>北韓否認向俄羅斯派遣軍隊的傳言</h2>
+<p>北韓政府駁斥了有關向俄羅斯派遣軍隊的傳言，稱這是「毫無根據的謠言」。</p>
+<p>韓國總統尹錫悅與北約秘書長進行了電話會議，討論了北韓派遣軍隊到俄羅斯的問題。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pwZLLgcOKGw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了.html">閔熙珍逆轉勝！再度當選ADOR董事，與海譜爭議未了</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/BTS成員鄭號錫完成18個月兵役　笑容滿面揮別軍營生活.html">BTS成員鄭號錫完成18個月兵役　笑容滿面揮別軍營生活</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團.html">CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
