@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 19:55:05 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 20:06:12 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -381,5 +381,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>ILLIT以獨特風格回歸，推出新專輯。韓國女團ILLIT在今年春天以單曲“Magnetic”成功出道後，帶著第二張迷你專輯“I'll Like You”回歸，旨在延續之前的成功。...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 19:55:05 +0800</pubDate>
+</item><item>
+  <title>74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行</title>
+  <link>https://www.famechos.me/news/74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行.html</link>
+  <description> Cho Yong-pil 證明年齡不是音樂生涯的障礙：K-pop 傳奇人物的第 20 張專輯凱旋歸來...</description>
+  <category>K-Pop</category>
+  <pubDate>Tue, 22 Oct 2024 20:06:12 +0800</pubDate>
 </item></channel>
 </rss>
