@@ -380,4 +380,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T20:06:12+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
